--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
    <h1>Febre90s</h1>
    <p>Música da Selva de Concreto Brasileira" e busca disseminar a cultura de rua, com letras que retratam a realidade de jovens periféricos</p>
-<h2> Pumapjl Sonotws</h2>
-<p>Música Popular da Selva de Concreto Brasileira</p>
+<h2> Pumapjl & Sonotws</h2>
+<p>A febre dos anos 90 é um termo que faz referência ao impacto cultural e social marcante da década de 1990, especialmente no Brasil.</p>
 <h3></h3>
 </body>
-</html>
+</html
