--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
    <p>Música da Selva de Concreto Brasileira" e busca disseminar a cultura de rua, com letras que retratam a realidade de jovens periféricos</p>
 <h2> Pumapjl & Sonotws</h2>
 <p>A febre dos anos 90 é um termo que faz referência ao impacto cultural e social marcante da década de 1990, especialmente no Brasil.</p>
-<h3></h3>
+<p>A febre dos anos 90 é um termo que faz referência ao impacto cultural e social marcante da década de 1990, especialmente no Brasil. Foi uma época de mudanças rápidas, em que novos estilos musicais como o grunge, o rap e o pagode se destacaram, e fenômenos da mídia como os seriados e desenhos animados ganharam uma enorme popularidade.</p>
 </body>
 </html
