--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
    <h1>Febre90s</h1>
    <p>Música da Selva de Concreto Brasileira" e busca disseminar a cultura de rua, com letras que retratam a realidade de jovens periféricos</p>
-<p></p>
+<p><A década também foi marcada pela ascensão da internet e da tecnologia, com o advento dos primeiros computadores pessoais, e pelas transformações políticas e econômicas, como o lançamento do Real, que trouxe estabilidade ao país.p>
+    <p>O período é lembrado com nostalgia, principalmente pela moda, os brinquedos e os brinquedinhos que marcaram a infância de muitos, além das festas e do estilo de vida vibrante que dominava a época.</p>
+    <p>A "febre dos anos 90" é um símbolo dessa época que continua a influenciar tendências culturais até hoje.</p>
+    
+
 </body>
 </html
