--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <p><A década também foi marcada pela ascensão da internet e da tecnologia, com o advento dos primeiros computadores pessoais, e pelas transformações políticas e econômicas, como o lançamento do Real, que trouxe estabilidade ao país.p>
     <p>O período é lembrado com nostalgia, principalmente pela moda, os brinquedos e os brinquedinhos que marcaram a infância de muitos, além das festas e do estilo de vida vibrante que dominava a época.</p>
     <p>A "febre dos anos 90" é um símbolo dessa época que continua a influenciar tendências culturais até hoje.</p>
-    
+    <p>A "febre dos anos 90" foi um período que marcou a cultura mundial com uma explosão de novos estilos e tendências que até hoje são lembrados com carinho e nostalgia. No Brasil, os anos 90 foram uma época de transição, com a chegada da estabilidade econômica através do Plano Real e o fim de um longo período de hiperinflação. A música, por exemplo, passou a refletir essa mudança, com o pagode e o axé conquistando grandes públicos, enquanto a cena do rock e do rap também ganhava força.</p>
+    <p>Paralelamente, a televisão se tornou a principal fonte de entretenimento, com programas e desenhos animados que ainda fazem parte da memória afetiva de muitos. A moda também teve seu auge com o estilo "streetwear", as calças de cintura alta e os acessórios coloridos. A internet, ainda em seus primeiros passos, começou a conectar as pessoas e a transformar a maneira como consumiam informação e entretenimento. A década de 90 foi uma verdadeira febre, em que os jovens viviam intensamente cada movimento cultural, e cujas influências permanecem vivas até hoje, seja na música, no cinema, na moda ou nas redes sociais.</p>
+
 
 </body>
 </html
