--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <p>A "febre dos anos 90" é um símbolo dessa época que continua a influenciar tendências culturais até hoje.</p>
     <p>A "febre dos anos 90" foi um período que marcou a cultura mundial com uma explosão de novos estilos e tendências que até hoje são lembrados com carinho e nostalgia. No Brasil, os anos 90 foram uma época de transição, com a chegada da estabilidade econômica através do Plano Real e o fim de um longo período de hiperinflação. A música, por exemplo, passou a refletir essa mudança, com o pagode e o axé conquistando grandes públicos, enquanto a cena do rock e do rap também ganhava força.</p>
     <p>Paralelamente, a televisão se tornou a principal fonte de entretenimento, com programas e desenhos animados que ainda fazem parte da memória afetiva de muitos. A moda também teve seu auge com o estilo "streetwear", as calças de cintura alta e os acessórios coloridos. A internet, ainda em seus primeiros passos, começou a conectar as pessoas e a transformar a maneira como consumiam informação e entretenimento. A década de 90 foi uma verdadeira febre, em que os jovens viviam intensamente cada movimento cultural, e cujas influências permanecem vivas até hoje, seja na música, no cinema, na moda ou nas redes sociais.</p>
+<h2>PumaPjl & SonoTWS</h2>
+<P>O PumaPJL é um dos ícones mais representativos da febre dos anos 90, especialmente para quem cresceu no Brasil durante aquela década. A sigla se refere à Puma, Ponto de Juventude Livre, uma iniciativa que se tornou um marco entre os jovens, representando a energia e a irreverência dessa geração. Embora mais conhecida por seu vínculo com a moda esportiva, o nome Puma evocava uma sensação de pertencimento e atitude nas ruas e nas baladas, uma verdadeira tradução do espírito de rebeldia e criatividade da época.</P>
+<p>A Puma esteve fortemente associada ao movimento streetwear, que ganhou força nos anos 90, mas também se misturava com a vibe do rap, do hip-hop e do skate. Para muitos, a marca foi uma espécie de símbolo da juventude, um elemento que ultrapassava apenas o aspecto do consumo e se tornava uma maneira de se expressar. Era a época em que as roupas de marca, como as da Puma, não eram apenas sobre status, mas também sobre identidade e autenticidade.</p>
+<p>Dentro dessa atmosfera dos anos 90, marcas como a Puma estavam alinhadas com o universo jovem, conectando-se não só ao esporte, mas também à cultura pop e à reinvenção do estilo de vida. Combinando roupas despojadas com cores vibrantes, estampas ousadas e aquele toque "grunge" que era a cara da década, o PumaPJL era uma verdadeira expressão da febre dos anos 90, unindo atitude, moda e música, e representando a energia vibrante que tomou conta das ruas e dos corações dos jovens daquela época.</p>
 
-.
+
+
 </body>
+
+
+
 </html
