--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=0 mmmmmmmmmmmhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh, initial-scale=1.0"> -->
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css
+<head>
 <body>
    <h1>Febre90s</h1>
    <p>Música da Selva de Concreto Brasileira" e busca disseminar a cultura de rua, com letras que retratam a realidade de jovens periféricos</p>
@@ -17,11 +18,3 @@
 <P>O PumaPJL é um dos ícones mais representativos da febre dos anos 90, especialmente para quem cresceu no Brasil durante aquela década. A sigla se refere à Puma, Ponto de Juventude Livre, uma iniciativa que se tornou um marco entre os jovens, representando a energia e a irreverência dessa geração. Embora mais conhecida por seu vínculo com a moda esportiva, o nome Puma evocava uma sensação de pertencimento e atitude nas ruas e nas baladas, uma verdadeira tradução do espírito de rebeldia e criatividade da época.</P>
 <p>A Puma esteve fortemente associada ao movimento streetwear, que ganhou força nos anos 90, mas também se misturava com a vibe do rap, do hip-hop e do skate. Para muitos, a marca foi uma espécie de símbolo da juventude, um elemento que ultrapassava apenas o aspecto do consumo e se tornava uma maneira de se expressar. Era a época em que as roupas de marca, como as da Puma, não eram apenas sobre status, mas também sobre identidade e autenticidade.</p>
 <p>Dentro dessa atmosfera dos anos 90, marcas como a Puma estavam alinhadas com o universo jovem, conectando-se não só ao esporte, mas também à cultura pop e à reinvenção do estilo de vida. Combinando roupas despojadas com cores vibrantes, estampas ousadas e aquele toque "grunge" que era a cara da década, o PumaPJL era uma verdadeira expressão da febre dos anos 90, unindo atitude, moda e música, e representando a energia vibrante que tomou conta das ruas e dos corações dos jovens daquela época.</p>
-
-.
-
-</body>
-
-
-
-</html
