--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
     <link rel="stylesheet" href="style.css">
 <head>
 <body>
-   <h1>Febre90s</h1>
-   <p>Música da Selva de Concreto Brasileira" e busca disseminar a cultura de rua, com letras que retratam a realidade de jovens periféricos</p>
-<p><A década também foi marcada pela ascensão da internet e da tecnologia, com o advento dos primeiros computadores pessoais, e pelas transformações políticas e econômicas, como o lançamento do Real, que trouxe estabilidade ao país.p>
-    <p>O período é lembrado com nostalgia, principalmente pela moda, os brinquedos e os brinquedinhos que marcaram a infância de muitos, além das festas e do estilo de vida vibrante que dominava a época.</p>
-    <p>A "febre dos anos 90" é um símbolo dessa época que continua a influenciar tendências culturais até hoje.</p>
-    <p>A "febre dos anos 90" foi um período que marcou a cultura mundial com uma explosão de novos estilos e tendências que até hoje são lembrados com carinho e nostalgia. No Brasil, os anos 90 foram uma época de transição, com a chegada da estabilidade econômica através do Plano Real e o fim de um longo período de hiperinflação. A música, por exemplo, passou a refletir essa mudança, com o pagode e o axé conquistando grandes públicos, enquanto a cena do rock e do rap também ganhava força.</p>
-    <p>Paralelamente, a televisão se tornou a principal fonte de entretenimento, com programas e desenhos animados que ainda fazem parte da memória afetiva de muitos. A moda também teve seu auge com o estilo "streetwear", as calças de cintura alta e os acessórios coloridos. A internet, ainda em seus primeiros passos, começou a conectar as pessoas e a transformar a maneira como consumiam informação e entretenimento. A década de 90 foi uma verdadeira febre, em que os jovens viviam intensamente cada movimento cultural, e cujas influências permanecem vivas até hoje, seja na música, no cinema, na moda ou nas redes sociais.</p>
-<h2>PumaPjl & SonoTWS</h2>
-<P>O PumaPJL é um dos ícones mais representativos da febre dos anos 90, especialmente para quem cresceu no Brasil durante aquela década. A sigla se refere à Puma, Ponto de Juventude Livre, uma iniciativa que se tornou um marco entre os jovens, representando a energia e a irreverência dessa geração. Embora mais conhecida por seu vínculo com a moda esportiva, o nome Puma evocava uma sensação de pertencimento e atitude nas ruas e nas baladas, uma verdadeira tradução do espírito de rebeldia e criatividade da época.</P>
-<p>A Puma esteve fortemente associada ao movimento streetwear, que ganhou força nos anos 90, mas também se misturava com a vibe do rap, do hip-hop e do skate. Para muitos, a marca foi uma espécie de símbolo da juventude, um elemento que ultrapassava apenas o aspecto do consumo e se tornava uma maneira de se expressar. Era a época em que as roupas de marca, como as da Puma, não eram apenas sobre status, mas também sobre identidade e autenticidade.</p>
-<p>Dentro dessa atmosfera dos anos 90, marcas como a Puma estavam alinhadas com o universo jovem, conectando-se não só ao esporte, mas também à cultura pop e à reinvenção do estilo de vida. Combinando roupas despojadas com cores vibrantes, estampas ousadas e aquele toque "grunge" que era a cara da década, o PumaPJL era uma verdadeira expressão da febre dos anos 90, unindo atitude, moda e música, e representando a energia vibrante que tomou conta das ruas e dos corações dos jovens daquela época.</p>
+   <h1>🌟Febre 90s: Quando o Estilo Era Exagerado e Inesquecível</h1>
+   <p>A década de 1990 marcou uma explosão de referências culturais que até hoje influenciam a moda, música e comportamento. Tudo era exagerado, colorido e com muita personalidade. Quem viveu essa época, lembra com nostalgia dos tênis plataforma, do tamagotchi e das fitas VHS.</p>
+<p><O visual das ruas refletia a mistura de tribos: grunge, clubber, hip hop e minimalismo conviviam lado a lado. E o curioso é que boa parte dessa estética voltou com tudo nos últimos anos, mostrando que o que é bom nunca sai de moda — apenas dá um tempo.p>
+    <p>A moda nos anos 90 era um reflexo direto da liberdade criativa. Não havia medo de misturar estampas, cores berrantes e acessórios ousados. Era comum ver looks com jeans rasgado, camiseta larga e tênis grandão, tudo junto e misturado.</p>
+    <p>As ruas viraram passarelas para jovens que queriam se expressar. O visual dizia muito sobre a tribo que você pertencia: quem ouvia rock tinha um estilo, quem curtia rap usava outro, e todos tinham um espaço garantido.</p>
+    <p>Até os cortes de cabelo eram únicos: cortes assimétricos, franjinhas, gel colorido e até penteados “espetados” marcaram presença. Tudo era feito com a intenção de se destacar, de mostrar atitude — e às vezes, até parecer “diferente só por ser”.</p>
+    <p>E mesmo com toda essa “bagunça” estética, a década de 90 tinha uma harmonia própria. A mistura era tão autêntica que virou tendência. O exagero virou charme. E a liberdade virou símbolo de uma geração criativa e inesquecível.</p>
+<h2>🎶 Música, TV e Cultura Pop que Definiram uma Geração</h2>
+<P>Nos anos 90, a música dominava o mundo com bandas como Nirvana, Backstreet Boys, Spice Girls, Mamonas Assassinas e É o Tchan. Cada grupo representava um estilo, uma atitude, uma fase. Era a época dos CDs, das rádios bombando e da MTV em alta.</P>
+<p>Na televisão, programas como Chaves, Castelo Rá-Tim-Bum, TV Colosso, Malhação e Power Rangers faziam parte do cotidiano da garotada. Os videogames Super Nintendo e Mega Drive completavam o combo da diversão em casa.</p>
+<h3>👕 A Moda 90s: Um Show de Identidade e Liberdade</h3>
+<p>Calças largas, jaquetas jeans, camisas xadrez, pochetes, óculos coloridos, moletons oversize e muito neon. A moda 90s era uma mistura de ousadia e conforto. Não havia muito certo ou errado: a ideia era expressar quem você era, sem medo.</p>
+<p>Hoje em dia, muitos desses itens voltaram ao guarda-roupa da nova geração. Celebridades e influenciadores resgataram essas peças com um toque moderno. O resultado? Um revival que une o melhor do passado com a estética do presente.</p>
+<h4>📌 6 Ícones que Marcaram a Febre 90s</h4>
+<p>1. Tamagotchi (o famoso "bichinho virtual")</p>
+<p>2. Walkman com fita cassete</p>
+<P>3. Disquete para salvar trabalhos de escola</P>
+<p>4. calça cargo</p>
+<h5>🔄 Por Que Ainda Somos Fãs da Década de 90?</h5>
+<p>O sentimento nostálgico explica parte do amor pelos anos 90, mas vai além. Há um conforto em relembrar uma época mais simples, com menos internet e mais olho no olho. As pessoas consumiam com mais calma, curtiam mais o momento.</p>
+<p>Com o avanço da tecnologia, o passado virou uma espécie de refúgio emocional. Por isso, reviver músicas, roupas e hábitos dos anos 90 virou tendência. É como revisitar uma parte da nossa infância ou adolescência que continua viva dentro da gente.</p>
+<h6>💾 O Futuro Sempre Olha Para o Passado</h6>
+<p>A febre 90s continua nos surpreendendo, porque ela nunca desapareceu de verdade. Ela está nos filtros das redes sociais, nos clipes novos que imitam VHS e nos memes que usam frames antigos. A cultura pop sempre reaproveita suas raízes.</p>
+<p>A geração atual redescobriu o poder do “retrô” e, mesmo com a velocidade do mundo digital, há um prazer em apertar o “pause” para reviver os tempos em que tudo parecia mais divertido — e colorido.</p>
+
