--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 <head>
-<body>
-    <img src="download.png"
-<h1>🌟Febre 90s: Quando o Estilo Era Exagerado e Inesquecível</h1>
-    <p>A década de 1990 marcou uma explosão de referências culturais que até hoje influenciam a moda, música e comportamento. Tudo era exagerado, colorido e com muita personalidade. Quem viveu essa época, lembra com nostalgia dos tênis plataforma, do tamagotchi e das fitas VHS.</p>
+<h1>🌟Febre 90s: Quando o Estilo Era Exagerado e Inesquecível<>p>>A década de 1990 marcou uma explosão de referências culturais que até hoje influenciam a moda, música e comportamento. Tudo era exagerado, colorido e com muita personalidade. Quem viveu essa época, lembra com nostalgia dos tênis plataforma, do tamagotchi e das fitas VHS.</p>
+   <img src="download.png"
     <p><O visual das ruas refletia a mistura de tribos: grunge, clubber, hip hop e minimalismo conviviam lado a lado. E o curioso é que boa parte dessa estética voltou com tudo nos últimos anos, mostrando que o que é bom nunca sai de moda — apenas dá um tempo.p>
     <p>A moda nos anos 90 era um reflexo direto da liberdade criativa. Não havia medo de misturar estampas, cores berrantes e acessórios ousados. Era comum ver looks com jeans rasgado, camiseta larga e tênis grandão, tudo junto e misturado.</p>
     <p>As ruas viraram passarelas para jovens que queriam se expressar. O visual dizia muito sobre a tribo que você pertencia: quem ouvia rock tinha um estilo, quem curtia rap usava outro, e todos tinham um espaço garantido.</p>
