--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <p>Calças largas, jaquetas jeans, camisas xadrez, pochetes, óculos coloridos, moletons oversize e muito neon. A moda 90s era uma mistura de ousadia e conforto. Não havia muito certo ou errado: a ideia era expressar quem você era, sem medo.</p>
     <p>Hoje em dia, muitos desses itens voltaram ao guarda-roupa da nova geração. Celebridades e influenciadores resgataram essas peças com um toque moderno. O resultado? Um revival que une o melhor do passado com a estética do presente.</p>
 <h4>📌 6 Ícones que Marcaram a Febre 90s</h4>
-    <p>1. Tamagotchi (o famoso "bichinho virtual")</p>
-    <p>2. Walkman com fita cassete</p>
-    <P>3. Disquete para salvar trabalhos de escola</P>
-    <p>4. calça cargo</p>
+    <li>1. Tamagotchi (o famoso "bichinho virtual")</li>
+    <li>2. Walkman com fita cassete</li>>
+    <li>3. Disquete para salvar trabalhos de escola</li>>
+    <li>4. calça cargo</li>
 <h5>🔄 Por Que Ainda Somos Fãs da Década de 90?</h5>
     <p>O sentimento nostálgico explica parte do amor pelos anos 90, mas vai além. Há um conforto em relembrar uma época mais simples, com menos internet e mais olho no olho. As pessoas consumiam com mais calma, curtiam mais o momento.</p>
     <p>Com o avanço da tecnologia, o passado virou uma espécie de refúgio emocional. Por isso, reviver músicas, roupas e hábitos dos anos 90 virou tendência. É como revisitar uma parte da nossa infância ou adolescência que continua viva dentro da gente.</p>
