--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <p>Calças largas, jaquetas jeans, camisas xadrez, pochetes, óculos coloridos, moletons oversize e muito neon. A moda 90s era uma mistura de ousadia e conforto. Não havia muito certo ou errado: a ideia era expressar quem você era, sem medo.</p>
     <p>Hoje em dia, muitos desses itens voltaram ao guarda-roupa da nova geração. Celebridades e influenciadores resgataram essas peças com um toque moderno. O resultado? Um revival que une o melhor do passado com a estética do presente.</p>
 <h4>📌 6 Ícones que Marcaram a Febre 90s</h4>
-    <li>1. Tamagotchi (o famoso "bichinho virtual")</li>
-    <li>2. Walkman com fita cassete</li>>
-    <li>3. Disquete para salvar trabalhos de escola</li>>
-    <li>4. calça cargo</li>
+    <li> 1. Tamagotchi (o famoso "bichinho virtual")</li>
+    <li> 2. Walkman com fita cassete</li>>
+    <li> 3. Disquete para salvar trabalhos de escola</li>>
+    <li> 4. calça cargo</li>
 <h5>🔄 Por Que Ainda Somos Fãs da Década de 90?</h5>
     <p>O sentimento nostálgico explica parte do amor pelos anos 90, mas vai além. Há um conforto em relembrar uma época mais simples, com menos internet e mais olho no olho. As pessoas consumiam com mais calma, curtiam mais o momento.</p>
     <p>Com o avanço da tecnologia, o passado virou uma espécie de refúgio emocional. Por isso, reviver músicas, roupas e hábitos dos anos 90 virou tendência. É como revisitar uma parte da nossa infância ou adolescência que continua viva dentro da gente.</p>
 <h6>💾 O Futuro Sempre Olha Para o Passado</h6>
     <p>A febre 90s continua nos surpreendendo, porque ela nunca desapareceu de verdade. Ela está nos filtros das redes sociais, nos clipes novos que imitam VHS e nos memes que usam frames antigos. A cultura pop sempre reaproveita suas raízes.</p>
     <p>A geração atual redescobriu o poder do “retrô” e, mesmo com a velocidade do mundo digital, há um prazer em apertar o “pause” para reviver os tempos em que tudo parecia mais divertido — e colorido.</p>
-
+<img src="download.png"
