--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <h4>📌 6 Ícones que Marcaram a Febre 90s</h4>
 <ul>
     <li> 1. Tamagotchi (o famoso "bichinho virtual")</li>
-    <li> 2. Walkman com fita cassete</li>>
-    <li> 3. Disquete para salvar trabalhos de escola</li>>
+    <li> 2. Walkman com fita cassete</li>
+    <li> 3. Disquete para salvar trabalhos de escola</li>
     <li> 4. calça cargo</li>
  </ul>
 <h5>🔄 Por Que Ainda Somos Fãs da Década de 90?</h5>
