--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <p>Hoje em dia, muitos desses itens voltaram ao guarda-roupa da nova geração. Celebridades e influenciadores resgataram essas peças com um toque moderno. O resultado? Um revival que une o melhor do passado com a estética do presente.</p>
 <h4>📌 6 Ícones que Marcaram a Febre 90s</h4>
 <ul>
-    <li> 1. Tamagotchi (o famoso "bichinho virtual")</li>
-    <li> 2. Walkman com fita cassete</li>
-    <li> 3. Disquete para salvar trabalhos de escola</li>
+    <li> 1. Tamagotchi </li>
+    <li> 2. fita cassete</li>
+    <li> 3. Disquetes </li>
     <li> 4. calça cargo</li>
  </ul>
 <h5>🔄 Por Que Ainda Somos Fãs da Década de 90?</h5>
