--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Febre 90s</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <img src="Febre90s.png" alt="Imagem da febre dos anos 90">
